[gd_scene load_steps=12 format=3 uid="uid://ba8p40n5btqsk"]

[ext_resource type="Script" path="res://screens/main/game_logic.gd" id="1_677oh"]
[ext_resource type="PackedScene" uid="uid://ckclcfxxs1obv" path="res://objects/market/market.tscn" id="1_765yv"]
[ext_resource type="PackedScene" uid="uid://qfgj17dwemc6" path="res://objects/project/project.tscn" id="1_hqvik"]
[ext_resource type="PackedScene" uid="uid://dv73rqal2aqgs" path="res://objects/employee/employee.tscn" id="3_2v47i"]
[ext_resource type="PackedScene" uid="uid://cfncrhmusammc" path="res://objects/internal/hire-fire.tscn" id="4_fudho"]
[ext_resource type="PackedScene" uid="uid://ip43o7ukforf" path="res://objects/internal/internal.tscn" id="5_yd8vj"]
[ext_resource type="PackedScene" uid="uid://goh2wnysibo4" path="res://objects/employee/external/external.tscn" id="7_aarp8"]
[ext_resource type="Script" path="res://objects/internal/fire_only.gd" id="9_adpjf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iduvf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4md2u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vdyj0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_677oh")

[node name="background" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopPanel" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TopPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/TopPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Button_Dummy" type="Button" parent="MainContainer/TopPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_iduvf")
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "<<< Previous Step
(only full version)"
icon_alignment = 1

[node name="Steps" type="Label" parent="MainContainer/TopPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "STEPS:
1/15"
horizontal_alignment = 1

[node name="Money" type="Label" parent="MainContainer/TopPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "MONEY:
3500"
horizontal_alignment = 1

[node name="Profit_Loss" type="Label" parent="MainContainer/TopPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "PROFIT/LOSS:
3500"
horizontal_alignment = 1

[node name="Button_Next" type="Button" parent="MainContainer/TopPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_iduvf")
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Next Step >>>
(DONE)
"
icon_alignment = 1

[node name="Button_Next" type="Button" parent="MainContainer/TopPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_iduvf")
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Next Step >>>
(DONE)
"
icon_alignment = 1

[node name="CentralPanel" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="LeftPanel" type="PanelContainer" parent="MainContainer/CentralPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Education" type="PanelContainer" parent="MainContainer/CentralPanel/LeftPanel"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_4md2u")

[node name="BG_Color_Top" type="ColorRect" parent="MainContainer/CentralPanel/LeftPanel/Education"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 132)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="BG_Color" type="ColorRect" parent="MainContainer/CentralPanel/LeftPanel/Education"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="CentralPanel" type="VBoxContainer" parent="MainContainer/CentralPanel/LeftPanel/Education"]
layout_mode = 2

[node name="Upskill" type="Label" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "  UPSKILL Education"
vertical_alignment = 1
uppercase = true

[node name="Fee_value" type="Label" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "PRICE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Posibilities" type="HBoxContainer" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4
alignment = 1

[node name="Employee" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee2" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee3" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee4" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Upskill_value" type="Label" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3
text = "---"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upskill_label" type="Label" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel/Upskill_value"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Expenses:"
vertical_alignment = 1
uppercase = true

[node name="Upskill_label2" type="Label" parent="MainContainer/CentralPanel/LeftPanel/Education/CentralPanel/Upskill_value"]
visible = false
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Upskill expenses:"
vertical_alignment = 1
uppercase = true

[node name="Market" parent="MainContainer/CentralPanel" instance=ExtResource("1_765yv")]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2

[node name="RightPanel" type="PanelContainer" parent="MainContainer/CentralPanel"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="Support" parent="MainContainer/CentralPanel/RightPanel" instance=ExtResource("1_hqvik")]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="External" parent="MainContainer/CentralPanel/RightPanel" instance=ExtResource("7_aarp8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="BottomPanel" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Resources" type="HBoxContainer" parent="MainContainer/BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Hire" parent="MainContainer/BottomPanel/Resources" instance=ExtResource("4_fudho")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="dummy_hf" type="PanelContainer" parent="MainContainer/BottomPanel/Resources"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Employees" type="HBoxContainer" parent="MainContainer/BottomPanel/Resources/dummy_hf"]
layout_mode = 2
alignment = 1

[node name="Employee" parent="MainContainer/BottomPanel/Resources/dummy_hf/Employees" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee3" parent="MainContainer/BottomPanel/Resources/dummy_hf/Employees" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee2" parent="MainContainer/BottomPanel/Resources/dummy_hf/Employees" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Internal" parent="MainContainer/BottomPanel/Resources" instance=ExtResource("5_yd8vj")]
unique_name_in_owner = true
layout_mode = 2

[node name="dummy_ext" type="PanelContainer" parent="MainContainer/BottomPanel/Resources"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Employees" type="HBoxContainer" parent="MainContainer/BottomPanel/Resources/dummy_ext"]
layout_mode = 2
alignment = 1

[node name="Employee" parent="MainContainer/BottomPanel/Resources/dummy_ext/Employees" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee3" parent="MainContainer/BottomPanel/Resources/dummy_ext/Employees" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee2" parent="MainContainer/BottomPanel/Resources/dummy_ext/Employees" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Fire_only" type="PanelContainer" parent="MainContainer/BottomPanel/Resources"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_vdyj0")
script = ExtResource("9_adpjf")

[node name="BG_Color_Top" type="ColorRect" parent="MainContainer/BottomPanel/Resources/Fire_only"]
custom_minimum_size = Vector2(0, 132)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="BG_Color" type="ColorRect" parent="MainContainer/BottomPanel/Resources/Fire_only"]
visible = false
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="CentralPanel" type="VBoxContainer" parent="MainContainer/BottomPanel/Resources/Fire_only"]
layout_mode = 2

[node name="Intern_expenses_label" type="Label" parent="MainContainer/BottomPanel/Resources/Fire_only/CentralPanel"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "Fire"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Expenses_value" type="Label" parent="MainContainer/BottomPanel/Resources/Fire_only/CentralPanel"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "PRICE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Employees" type="HBoxContainer" parent="MainContainer/BottomPanel/Resources/Fire_only/CentralPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4
alignment = 1

[node name="External" parent="MainContainer/BottomPanel/Resources" instance=ExtResource("7_aarp8")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MainContainer/TopPanel/VBoxContainer/HBoxContainer/Button_Dummy" to="." method="_on_next_phase_button_pressed"]
[connection signal="pressed" from="MainContainer/TopPanel/VBoxContainer/HBoxContainer/Button_Next" to="." method="_on_next_phase_button_pressed"]
[connection signal="pressed" from="MainContainer/TopPanel/VBoxContainer/Button_Next" to="." method="_on_next_phase_button_pressed"]
